# shoestring-ce

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
scripts/: compile_resource_strings.sh
scripts/ci/: poetry_build.sh  setup_lint.sh
shoestring_ce/: __main__.py
shoestring_ce/internal/: CertificateV3Factory.py
shoestring_ce/lang/ja/LC_MESSAGES/: messages.po
shoestring_ce/wizard/: MultibyteButton.py  MultibyteTabbedView.py  __main__.py
shoestring_ce/wizard/screens/: end_screen.py  welcome.py
tests/: __init__.py
tests/internal/: test_CertificateFactory.py
tests/wizard/: test_MultibyteButton.py  test_MultibyteTabbedView.py
tests/wizard/screens/: test_end_screen.py  test_welcome.py
